--- a/package.json
+++ b/package.json
@@ -16,6 +16,14 @@
   },
   "dependencies": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  }
+    "react-dom": "^19.0.0",
+    "react-router": "^7.3.0"
+  },
+
+    "@parcel/resolver-default": {
+      "packageExports": true
+    }
+  
+
+
 }
